<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User">

    <Button
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile_Button" />

    <Button
        android:id="@+id/View_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_jobs_text" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_Button" />

</LinearLayout>